Crash in poll() function of object.modifier_apply #78536

Closed
opened 2020-07-02 16:32:08 +02:00 by Vyacheslav Kobozev · 17 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken version: blender-2.90.0-52b125a790e3-windows64
Worked: blender-2.90.0-874af5301cdf-windows64
Caused by 6add0cc88a

Steps to reproduce

  • Add empty
  • call bpy.ops.object.modifier_apply() from a python console

or

  • Create new keymap entry in 3Dview->Object mode-> Global: object.modifier_apply, {key Ctrl RMB}
  • Add empty

Press {key Ctrl}

This results in Access violation reading location in modifier_apply_poll() on ID_IS_OVERRIDE_LIBRARY(ob->data) as ob->data is NULL

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken version: blender-2.90.0-52b125a790e3-windows64 Worked: blender-2.90.0-874af5301cdf-windows64 Caused by 6add0cc88a **Steps to reproduce** - Add empty - call `bpy.ops.object.modifier_apply()` from a python console or - Create new keymap entry in 3Dview->Object mode-> Global: object.modifier_apply, {key Ctrl RMB} - Add empty # Press {key Ctrl} This results in Access violation reading location in `modifier_apply_poll()` on `ID_IS_OVERRIDE_LIBRARY(ob->data)` as `ob->data` is NULL

Added subscriber: @Vyach

Added subscriber: @Vyach

Added subscriber: @shwaky

Added subscriber: @shwaky

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

This report does not contain all the requested information, which is required for us to investigate the issue.

Go to blender install directory run the blender_debug_log.cmd file, it will output logs when blender crashes, upload them here that is the blender_debug_output .

This report does not contain all the requested information, which is required for us to investigate the issue. Go to blender install directory run the blender_debug_log.cmd file, it will output logs when blender crashes, upload them here that is the blender_debug_output .

@shwaky okay, did it.
I can reproduce it well.
Add array to candle, no relative, only by object (empty), move empty, save → crash
blender_debug_output.txt
1.blend

2020-07-03_00-51-22.mp4

@shwaky okay, did it. I can reproduce it well. Add array to candle, no relative, only by object (empty), move empty, save → crash [blender_debug_output.txt](https://archive.blender.org/developer/F8660540/blender_debug_output.txt) [1.blend](https://archive.blender.org/developer/F8660542/1.blend) [2020-07-03_00-51-22.mp4](https://archive.blender.org/developer/F8660541/2020-07-03_00-51-22.mp4)

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Can not reproduce.

Does this happen when you click on File > Defaults > Load Factory Settings? If this is still problem, please upload crash file mentioned in debug log. like F:\BlenderTemp\1.crash.txt

Can not reproduce. Does this happen when you click on File > Defaults > Load Factory Settings? If this is still problem, please upload crash file mentioned in debug log. like `F:\BlenderTemp\1.crash.txt`

Crash caused with pressing Ctrl with selected empty.
Can`t reproduce it with factory settings.
Conflict is somwere in keymap.
I restored all keybindings with Ctrl and crash gone away.
I'll check all one by one.

Crash caused with pressing Ctrl with selected empty. Can`t reproduce it with factory settings. Conflict is somwere in keymap. I restored all keybindings with Ctrl and crash gone away. I'll check all one by one.

Reproduction:
Keymap, 3Dview->Object mode-> Global
Create new entry, operator object.modifier_apply, {key Ctrl RMB}
Save settings.
Select empty, press Ctrl few times or continuously

2020-07-03_18-53-34.mp4

Reproduction: Keymap, 3Dview->Object mode-> Global Create new entry, operator object.modifier_apply, {key Ctrl RMB} Save settings. Select empty, press Ctrl few times or continuously [2020-07-03_18-53-34.mp4](https://archive.blender.org/developer/F8661827/2020-07-03_18-53-34.mp4)
Vyacheslav Kobozev changed title from Multiply crashes on save (ctrl+S) to Crash with selected empty, pressing Ctrl and certain hotkey. 2020-07-03 18:05:23 +02:00
Vyacheslav Kobozev changed title from Crash with selected empty, pressing Ctrl and certain hotkey. to Crash with selected empty and Ctrl+RMB hotkey for object.modifier_apply 2020-07-03 18:06:04 +02:00

summon @iss

summon @iss

I will be summoned automatically, if I was involved :)

I will be summoned automatically, if I was involved :)

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Richard Antalik changed title from Crash with selected empty and Ctrl+RMB hotkey for object.modifier_apply to Crash in poll() function of object.modifier_apply 2020-07-07 04:23:02 +02:00

@iss okay, got it!

@iss okay, got it!
Philipp Oeser self-assigned this 2020-07-31 19:12:57 +02:00

This issue was referenced by 473d9507fa

This issue was referenced by 473d9507fa73a17970be325c8f797bbf6654aab4
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78536
No description provided.