Fix T78536: Crash calling object.modifier_apply on an empty

Caused by rB6add0cc88a0d.

Maniphest Tasks: T78536

Differential Revision: https://developer.blender.org/D8440